<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="4dp"
        android:text="@string/HEADER"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/FLAG_IMMUTABLE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/FLAG_IMMUTABLE" />
        <RadioButton
            android:id="@+id/FLAG_CANCEL_CURRENT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/FLAG_CANCEL_CURRENT" />
        <RadioButton
            android:id="@+id/FLAG_NO_CREATE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/FLAG_NO_CREATE" />
        <RadioButton
            android:id="@+id/FLAG_UPDATE_CURRENT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/FLAG_UPDATE_CURRENT" />
        <RadioButton
            android:id="@+id/FLAG_ONE_SHOT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/FLAG_ONE_SHOT" />

    </RadioGroup>

    <EditText
        android:id="@+id/time"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="23dp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:background="@color/yellow"
        android:onClick="startAlert"
        android:padding="6dp"
        android:text="Start Counter" />


</LinearLayout>